exception & transaction commit / rollback